Fix SI table ref

--- a/Methods.tex
+++ b/Methods.tex
@@ -1,7 +1,7 @@
 \section*{Materials and Methods}
 
 \subsection*{Strain construction}
-The \textit{E. coli} MG1655 strain and derivatives were used in this study. A list of all strains used is presented in Supp. Table \ref{tab:strains}.
+The \textit{E. coli} MG1655 strain and derivatives were used in this study. A list of all strains used is presented in Supp. Table \ref{SItab:strains}.
 
 \subsection*{Microscopy samples}
 For all experiments, cells were grown in M9 supplemented with 0.2\% (w/v) glucose, 2 mM MgSO$_4$, 0.1 mM CaCl$_2$, 1X MEM Essential and MEM non-essential amino acids (Gibco).
