Add multirow package import

--- a/Article.tex
+++ b/Article.tex
@@ -2,7 +2,8 @@
 
 \usepackage{newfloat}
 \DeclareFloatingEnvironment[name={Supplementary Figure}]{suppfigure}
-%\usepackage{microtype}
+\DeclareFloatingEnvironment[name={Supplementary Table}]{supptable}
+\usepackage{multirow}
 
 \newcommand{\dreca}{$\Delta$recA} % ΔrecA
 \newcommand{\teneighty}{RecB$_{1080}$} % RecB1080
