--- a/Results.tex
+++ b/Results.tex
@@ -46,26 +46,26 @@ To gain more insight into DNA binding by RecB, we induced additional DSBs by add
     \centering
     \begin{tabular}{llll}
         \toprule
-         &  & Lifetime (sec) & Population (\%) \\
-        Group & Rate type &  &  \\
+         &  & Lifetime (sec) & Proportion (\%) \\
+        Ciprofloxacin & Type &  &  \\
         \midrule
-        \multirow[t]{2}{*}{0} & Fast & 1.24 $\pm$ 0.2 & 97.38 $\pm$ 0.72 \\
-         & Slow & 7.15 $\pm$ 1.2 & 2.62 $\pm$ 0.72 \\
+        \multirow[t]{2}{*}{0} & Short & 1.24 $\pm$ 0.2 & 97.38 $\pm$ 0.72 \\
+         & Long & 7.15 $\pm$ 1.2 & 2.62 $\pm$ 0.72 \\
         \cline{1-4}
-        \multirow[t]{2}{*}{3 ng/mL} & Fast & 1.17 $\pm$ 0.16 & 96.6 $\pm$ 0.89 \\
-         & Slow & 5.54 $\pm$ 1.06 & 3.4 $\pm$ 0.89 \\
+        \multirow[t]{2}{*}{3 ng/mL} & Short & 1.17 $\pm$ 0.16 & 96.6 $\pm$ 0.89 \\
+         & Long & 5.54 $\pm$ 1.06 & 3.4 $\pm$ 0.89 \\
         \cline{1-4}
-        \multirow[t]{2}{*}{10 ng/mL} & Fast & 1.18 $\pm$ 0.14 & 94.91 $\pm$ 0.8 \\
-         & Slow & 6.53 $\pm$ 1.36 & 5.09 $\pm$ 0.8 \\
+        \multirow[t]{2}{*}{10 ng/mL} & Short & 1.18 $\pm$ 0.14 & 94.91 $\pm$ 0.8 \\
+         & Long & 6.53 $\pm$ 1.36 & 5.09 $\pm$ 0.8 \\
         \cline{1-4}
-        \multirow[t]{2}{*}{20 ng/mL} & Fast & 1.39 $\pm$ 0.18 & 95.78 $\pm$ 0.83 \\
-         & Slow & 9.21 $\pm$ 1.14 & 4.22 $\pm$ 0.83 \\
+        \multirow[t]{2}{*}{20 ng/mL} & Short & 1.39 $\pm$ 0.18 & 95.78 $\pm$ 0.83 \\
+         & Long & 9.21 $\pm$ 1.14 & 4.22 $\pm$ 0.83 \\
         \cline{1-4}
-        \multirow[t]{2}{*}{30 ng/mL} & Fast & 1.49 $\pm$ 0.23 & 92.48 $\pm$ 1.95 \\
-         & Slow & 9.83 $\pm$ 1.74 & 7.52 $\pm$ 1.95 \\
+        \multirow[t]{2}{*}{30 ng/mL} & Short & 1.49 $\pm$ 0.23 & 92.48 $\pm$ 1.95 \\
+         & Long & 9.83 $\pm$ 1.74 & 7.52 $\pm$ 1.95 \\
         \bottomrule
         \end{tabular}
-    \caption{}
+    \caption{Parameters derived from the spot lifetime histogram fits (Figures \ref{Fig:endogenous}D and \ref{Fig:nspots}B). The lifetime was calculated as the inverse of the fitted dissociation rate. Values are given as the mean $\pm$ standard deviation over 3 independent datasets.}
     \label{tab:fit_results}
 \end{table}
 
