Replaced Gam+WT monoexp fit in SI by WT at different cipro

--- a/Supplementary.tex
+++ b/Supplementary.tex
@@ -69,12 +69,12 @@ All experimental photobleaching curves were well-fitted by a mono-exponential de
 \label{SIFig:freehalo_image}
 \end{suppfigure*}
 
-% Monoexponential fit of Gam and WT data (cipro 30 ng/mL)
+% Monoexponential fit of WT data, all cipro concentrations
 \begin{suppfigure*}[htbp]
 \begin{center}
-\includegraphics[width=.5\linewidth]{SI_Figures/Monoexp_fits_Gam_cipro30.pdf}
+\includegraphics[width=\linewidth]{SI_Figures/Monoexp_fits_cipro.pdf}
 \end{center}
-\caption{Histogram of RecB DNA binding times (bars) under exposure to 30 ng/mL ciprofloxacin, with overlaid mono-exponential decay fits ($y=a.e^{-k.t}$, line), for cells expressing the Gam protein, or not (WT).}
+\caption{Histograms of RecB spot lifetime (bars) under exposure to ciprofloxacin, with overlaid mono-exponential decay fits ($y=a.e^{-k.t}$, black line).}
 \label{SIFig:monoexp_fits}
 \end{suppfigure*}
 
