--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -82,3 +82,14 @@
    url = {https://journals.plos.org/plosgenetics/article?id=10.1371/journal.pgen.1007256},
    year = {2018},
 }
+@article{Wilkinson2016,
+   abstract = {Our previous paper (Wilkinson et al, 2016) used high-resolution cryo-electron microscopy to solve the structure of the Escherichia coli RecBCD complex, which acts in both the repair of double-stranded DNA breaks and the degradation of bacteriophage DNA. To counteract the latter activity, bacteriophage λ encodes a small protein inhibitor called Gam that binds to RecBCD and inactivates the complex. Here, we show that Gam inhibits RecBCD by competing at the DNA-binding site. The interaction surface is extensive and involves molecular mimicry of the DNA substrate. We also show that expression of Gam in E. coli or Klebsiella pneumoniae increases sensitivity to fluoroquinolones; antibacterials that kill cells by inhibiting topoisomerases and inducing double-stranded DNA breaks. Furthermore, fluoroquinolone-resistance in K. pneumoniae clinical isolates is reversed by expression of Gam. Together, our data explain the synthetic lethality observed between topoisomerase-induced DNA breaks and the RecBCD gene products, suggesting a new co-antibacterial strategy.},
+   author = {Martin Wilkinson and Lucy Troman and Wan AK Wan Nur Ismah and Yuriy Chaban and Matthew B Avison and Mark S Dillingham and Dale B Wigley},
+   doi = {10.7554/ELIFE.22963},
+   journal = {eLife},
+   month = {12},
+   publisher = {eLife Sciences Publications, Ltd},
+   title = {Structural basis for the inhibition of RecBCD by Gam and its synergistic antibacterial effect with quinolones},
+   volume = {5},
+   year = {2016},
+}
