Added SI fig for cell length under Gam overexpression

--- a/Supplementary.tex
+++ b/Supplementary.tex
@@ -78,6 +78,16 @@ All experimental photobleaching curves were well-fitted by a mono-exponential de
 \label{SIFig:monoexp_fits}
 \end{suppfigure*}
 
+%\clearpage
+
+% Cell length under Gam over-expression, 0 and 30 ng/mL cipro
+\begin{suppfigure*}[htbp]
+    \begin{center}
+    \includegraphics[width=\linewidth]{SI_Figures/Cell_length_Gam.pdf}
+    \end{center}
+    \caption{Length of cells that over-express Gam or not (WT), under exposure to 0 or 30 ng/mL ciprofloxacin. Black dots show indvidual datasets, and bars the average between them.}
+    \label{SIFig:Gam_cell_length}
+\end{suppfigure*}
 
 % Photobleaching figure (curves + fitted rates)
 \begin{suppfigure*}[htbp]
