Added a short paragraph on spot lifetime thresholding

--- a/Results.tex
+++ b/Results.tex
@@ -76,7 +76,7 @@ Upon exposure to ciprofloxacin, the RecB spot lifetime histograms contained rela
 To determine whether both short- and long-lived spots resulted from RecB binding to DNA, we measured RecB spots lifetime in the presence and absence of ciprofloxacin while over-expressing the Gam protein of phage $\lambda$ from a plasmid. The Gam protein was previously shown to bind in place of DNA on the RecBCD complex\cite{Wilkinson2016}, and its overexpression is expected to abolish RecBCD binding to DNA. Accordingly, cells that over-expressed Gam and were exposed to high ciprofloxacin (30 ng/mL) showed little elongation compared to cells that did not overexpress Gam (Supp. Figure \ref{SIFig:Gam_cell_length}). The resulting RecB spot lifetime histograms showed a near-complete disappearance of the long-lived spots, while short-lived ones were still present (Figure \ref{Fig:nspots}C). This was confirmed by fitting the histogram with our bi-exponential decay model, which found proportions of long-lived spots ($\sim$3\%) similar to those in wild-type cells that were not exposed to ciprofloxacin (2.6\%, Table \ref{tab:fit_results}). This confirmed that (i) long-lived RecB spots correspond to RecB molecules that have bound to DNA, and (ii) short-lived RecB spots can result from other causes than short-lived DNA binding (Supp. Note \ref{note:spurious_spots}).
 
 %% We define a threshold (10 sec) above which no spots are observed in the Gam control (95% confidence). Any spots longer than 10 sec are expected to correspond to a DNA binding event.
-
+To further characterise the long-lived DNA binding events, we defined a spot lifetime threshold (10 sec), at which 95\% of the RecB spots observed under Gam overexpression are shorter than the threshold (Figure \ref{Fig:nspots}D).
 
 % Part 3: There are two regimes of DNA repair for ciprofloxacin-induced damage
 \subsection*{There are two regimes of DNA repair for ciprofloxacin-induced damage}
