Added upgreek package

--- a/Article.tex
+++ b/Article.tex
@@ -4,11 +4,13 @@
 \DeclareFloatingEnvironment[name={Supplementary Figure}]{suppfigure}
 \DeclareFloatingEnvironment[name={Supplementary Table}]{supptable}
 \usepackage{multirow}
+\usepackage{upgreek}
 
 \newcommand{\dreca}{$\Delta$recA} % ΔrecA
 \newcommand{\teneighty}{RecB$_{1080}$} % RecB1080
 \newcommand{\od}{OD$_{600}$} % OD600
 \newcommand{\umsq}{$\upmu$m$^2$} % µm2
+\newcommand{\ums}{$\upmu$m$^2$.s$^{-1}$} % µm2.s-1
 
 % Please give the surname of the lead author for the running footer
 \leadauthor{Thédié} 
