Added RecN chromosome compaction ref

--- a/Bibliography.bib
+++ b/Bibliography.bib
@@ -1,3 +1,19 @@
+@article{Odsbu2014,
+   abstract = {The nucleoids of undamaged Escherichia coli cells have a characteristic shape and number, which is dependent on the growth medium. Upon induction of the SOS response by a low dose of UV irradiation an extensive reorganization of the nucleoids occurred. Two distinct phases were observed by fluorescence microscopy. First, the nucleoids were found to change shape and fuse into compact structures at midcell. The compaction of the nucleoids lasted for 10-20 min and was followed by a phase where the DNA was dispersed throughout the cells. This second phase lasted for ~1 h. The compaction was found to be dependent on the recombination proteins RecA, RecO and RecR as well as the SOS-inducible, SMC (structural maintenance of chromosomes)- like protein RecN. RecN protein is produced in high amounts during the first part of the SOS response. It is possible that the RecN-mediated 'compact DNA' stage at the beginning of the SOS response serves to stabilize damaged DNA prior to recombination and repair. © 2014 The Authors.},
+   author = {Ingvild Odsbu and Kirsten Skarstad},
+   doi = {10.1099/MIC.0.075051-0/CITE/REFWORKS},
+   issn = {14652080},
+   issue = {PART 5},
+   journal = {Microbiology (United Kingdom)},
+   month = {5},
+   pages = {872-882},
+   pmid = {24615185},
+   publisher = {Microbiology Society},
+   title = {DNA compaction in the early part of the SOS response is dependent on RecN and RecA},
+   volume = {160},
+   url = {https://www.microbiologyresearch.org/content/journal/micro/10.1099/mic.0.075051-0},
+   year = {2014},
+}
 @article{Lepore2019a,
    abstract = {Cell biology is increasingly dependent on quantitative methods resulting in the need for microscopic labelling technologies that are highly sensitive and specific. Whilst the use of fluorescent proteins has led to major advances, they also suffer from their relatively low brightness and photo-stability, making the detection of very low abundance proteins using fluorescent protein-based methods challenging. Here, we characterize the use of the self-labelling protein tag called HaloTag, in conjunction with an organic fluorescent dye, to label and accurately count endogenous proteins present in very low numbers (<7) in individual Escherichia coli cells. This procedure can be used to detect single molecules in fixed cells with conventional epifluorescence illumination and a standard microscope. We show that the detection efficiency of proteins labelled with the HaloTag is ≥80%, which is on par or better than previous techniques. Therefore, this method offers a simple and attractive alternative to current procedures to detect low abundance molecules.},
    author = {Alessia Lepore and Hannah Taylor and Dirk Landgraf and Burak Okumus and Sebastián Jaramillo-Riveri and Lorna McLaren and Somenath Bakshi and Johan Paulsson and M. El Karoui},
